# Collector_cxx

./: CMakeLists.txt
doc/html/: _c_list_8h_source.html  _c_node_8h_source.html  _collector_8h_source.html  _list_8h_source.html  _node_8h_source.html  annotated.html  class_c_list-members.html  class_c_list.html  class_c_node-members.html  class_c_node.html  class_collector-members.html  class_collector.html  class_list-members.html  class_list.html  class_node-members.html  class_node.html  classes.html  dir_2c4d108b898a6df6b44b30d98e86eefb.html  dir_3a581ba30d25676e4b797b1f96d53b45.html  dir_400943e78b8d8fac43059fd627fccf81.html  dir_5558658cd00bed0a8f7b16ea608e31a6.html  dir_679c6f0e23547431c8675b9c7000382d.html  dir_6a8b2b630703cf807f05b226c3bd2807.html  dir_9cf8eb0b8df8165bdd1f9928d4eb8586.html  dir_c4a6d00bdc510136fbd964986dc2264a.html  dir_c981b3da483432cfb9c415b3c50e02ad.html  dir_d3a124954a1041d1240c647fa525ccc8.html  dir_e0e577bb65d4d6dbaceca1f6368a9e70.html  files.html  index.html
doc/html/search/: all_0.js
doc/latex/: annotated.tex  class_c_list.tex  class_c_node.tex  class_collector.tex  class_list.tex  class_node.tex  refman.tex
src/: main.cpp
src/pointers/: Pointers.cpp
src/util/: Collector.cpp  Collector.h
src/util/collector/: Collector.cpp  Collector.h
src/util/collector/clist/: CList.cpp  CList.h
src/util/collector/list/: CList.cpp  CList.h
src/util/list/: List.cpp  List.h
src/util/list/node/: Node.cpp  Node.h
test/util/collector/clist/: CListTest.cpp
test/util/collector/list/: CListTest.cpp
test/util/list/: ListTest.cpp
(+5 files in other folders)
